--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
-
 .DS_Store
+node_modules/
+.node-version
+.idea/dictionaries/MIERUNE_PC.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/workspace.xml
+package-lock.json
+.idea/mapboxgljs-starter.iml
