--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mapboxgljs-starter",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "main.js",
   "scripts": {
@@ -11,14 +11,15 @@
   "author": "Yasunori Kirimoto",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.7.1"
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.9"
   },
   "dependencies": {
-    "css-loader": "^0.28.7",
-    "file-loader": "^1.1.5",
-    "mapbox-gl": "^0.45.0",
-    "style-loader": "^0.19.0",
-    "url-loader": "^0.6.2"
+    "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
+    "mapbox-gl": "^0.50.0",
+    "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2"
   }
 }
